--- a/microservice-resource-processor/src/main/resources/application.properties
+++ b/microservice-resource-processor/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.application.name=microservice-resource-processor
 spring.application.song.service.name=microservice-song
+spring.rabbitmq.host=${RABBIT_HOST:localhost}
+spring.application.microservice-song.url=http://song-app:8080/songs
+logging.config.classpath=log-spring.xml
+logging.file=resource-processor.log
