--- a/microservice-resource/src/main/resources/application.properties
+++ b/microservice-resource/src/main/resources/application.properties
@@ -6,3 +6,4 @@ aws.s3.endpoint=http://localstack:4566
 aws.region=us-east-1
 spring.cloud.aws.s3.path-style-access-enabled=true
 bucket.name=song-bucket
+spring.rabbitmq.host=${RABBIT_HOST:localhost}
