--- a/.env
+++ b/.env
@@ -15,3 +15,10 @@ POSTGRES_DB_S=songservicedatabase
 POSTGRES_USER_R=resourceuser
 POSTGRES_PASSWORD_R=resourcepass
 POSTGRES_DB_R=resourceservicedatabase
+
+LOCALSTACK_DOCKER_NAME=song-storage
+RDB_DOCKER_NAME=postgres-resource
+SDB_DOCKER_NAME=postgres-song
+RESOURCE_PROC_DOCKER_NAME=resource_proc_app
+RESOURCE_DOCKER_NAME=resource_app
+SONG_DOCKER_NAME=song_app
