--- a/microservice-resource/Dockerfile
+++ b/microservice-resource/Dockerfile
@@ -9,3 +9,4 @@ FROM eclipse-temurin:21.0.4_7-jre-alpine AS runtime
 COPY --from=build /build/target/*.jar ./app-resource.jar
 EXPOSE 9090
 CMD ["java", "-jar", "./app-resource.jar"]
+RUN apk --no-cache add curl
