--- a/microservice-resource/src/main/resources/application.properties
+++ b/microservice-resource/src/main/resources/application.properties
@@ -7,3 +7,7 @@ aws.region=us-east-1
 spring.cloud.aws.s3.path-style-access-enabled=true
 bucket.name=song-bucket
 spring.rabbitmq.host=${RABBIT_HOST:localhost}
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:postgresql://localhost:5432/resourceservicedatabase?currentSchema=resource_schema
+spring.datasource.username=resourceuser
+spring.datasource.password=resourcepass
