--- a/microservice-song/src/main/resources/application.properties
+++ b/microservice-song/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.application.name=microservice-song
 server.port=8080
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:postgresql://localhost:5433/songservicedatabase?currentSchema=song_schema?autoReconnect=true
+spring.datasource.username=songuser
+spring.datasource.password=songpass
