--- a/.env
+++ b/.env
@@ -22,3 +22,4 @@ SDB_DOCKER_NAME=postgres-song
 RESOURCE_PROC_DOCKER_NAME=resource_proc_app
 RESOURCE_DOCKER_NAME=resource_app
 SONG_DOCKER_NAME=song_app
+GATEWAY_DOCKER_NAME=gateway_app
