--- a/gateway-service/Dockerfile
+++ b/gateway-service/Dockerfile
@@ -6,7 +6,7 @@ COPY /src /build/src
 RUN mvn package -DskipTests
 
 FROM eclipse-temurin:21.0.4_7-jre-alpine AS runtime
-COPY --from=build /build/target/*.jar ./app-song.jar
-EXPOSE 8580
-CMD ["java", "-jar", "./app-song.jar"]
+COPY --from=build /build/target/*.jar ./app-gateway.jar
+EXPOSE 8080
+CMD ["java", "-jar", "./app-gateway.jar"]
 RUN apk --no-cache add curl
