--- a/microservice-resource/src/main/resources/application.properties
+++ b/microservice-resource/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:postgresql://localhost:5432/resourceservicedatabase?currentSchema=resource_schema
 spring.datasource.username=resourceuser
 spring.datasource.password=resourcepass
+eureka.client.service-url.defaultZone = http://eureka-app:8761/eureka
