--- a/microservice-song/src/main/resources/application.properties
+++ b/microservice-song/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=microservice-song
-server.port=8080
+server.port=8580
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:postgresql://localhost:5433/songservicedatabase?currentSchema=song_schema?autoReconnect=true
 spring.datasource.username=songuser
 spring.datasource.password=songpass
+eureka.client.service-url.defaultZone = http://eureka-app:8761/eureka
