--- a/microservice-resource-processor/src/main/resources/application.properties
+++ b/microservice-resource-processor/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.rabbitmq.host=${RABBIT_HOST:localhost}
 spring.application.microservice-song.url=http://song-app:8080/songs
 logging.config.classpath=log-spring.xml
 logging.file=resource-processor.log
+eureka.client.service-url.defaultZone = http://eureka-app:8761/eureka
+spring.application.microservice-song.name=microservice-song
+spring.application.microservice-resource.name=microservice-resource
