--- a/microservice-resource/pom.xml
+++ b/microservice-resource/pom.xml
@@ -78,6 +78,10 @@
 			<artifactId>tika-parsers</artifactId>
 			<version>1.15</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
