--- a/microservice-resource/src/main/resources/application.properties
+++ b/microservice-resource/src/main/resources/application.properties
@@ -5,7 +5,8 @@ aws.credentials.secret-key=test_secret_access_key
 aws.s3.endpoint=http://localstack:4566
 aws.region=us-east-1
 spring.cloud.aws.s3.path-style-access-enabled=true
-bucket.name=song-bucket
+bucket.name.stage=song-bucket-staging
+bucket.name.permanent=song-bucket-permanent
 spring.rabbitmq.host=${RABBIT_HOST:localhost}
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:postgresql://localhost:5432/resourceservicedatabase?currentSchema=resource_schema
