--- a/microservice-resource/src/main/resources/application.properties
+++ b/microservice-resource/src/main/resources/application.properties
@@ -13,3 +13,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/resourceservicedatabase?c
 spring.datasource.username=resourceuser
 spring.datasource.password=resourcepass
 eureka.client.service-url.defaultZone = http://eureka-app:8761/eureka
+spring.application.microservice-storage.name=microservice-storage
