--- a/microservice-resource/src/main/resources/application.properties
+++ b/microservice-resource/src/main/resources/application.properties
@@ -13,4 +13,12 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/resourceservicedatabase?c
 spring.datasource.username=resourceuser
 spring.datasource.password=resourcepass
 eureka.client.service-url.defaultZone = http://eureka-app:8761/eureka
-spring.application.microservice-storage.name=microservice-storage
+spring.application.microservice-storage.name=microservice_storage
+
+resilience4j.circuitbreaker.instances.store.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.store.ringBufferSizeInClosedState=5
+resilience4j.circuitbreaker.instances.store.ringBufferSizeInHalfOpenState=3
+resilience4j.circuitbreaker.instances.store.waitDurationInOpenState=10s
+resilience4j.circuitbreaker.instances.store.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.store.recordExceptions=org.springframework.web.client.HttpServerErrorException,java.io.IOException,java.util.concurrent.TimeoutException,org.springframework.web.client.ResourceAccessException,org.springframework.web.client.HttpClientErrorException
+resilience4j.circuitbreaker.instances.store.ignoreExceptions=
