--- a/microservice-resource/src/main/resources/application.properties
+++ b/microservice-resource/src/main/resources/application.properties
@@ -22,3 +22,8 @@ resilience4j.circuitbreaker.instances.store.waitDurationInOpenState=10s
 resilience4j.circuitbreaker.instances.store.failureRateThreshold=50
 resilience4j.circuitbreaker.instances.store.recordExceptions=org.springframework.web.client.HttpServerErrorException,java.io.IOException,java.util.concurrent.TimeoutException,org.springframework.web.client.ResourceAccessException,org.springframework.web.client.HttpClientErrorException
 resilience4j.circuitbreaker.instances.store.ignoreExceptions=
+
+management.endpoint.metrics.enabled=true
+management.endpoints.web.exposure.include=*
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
