--- a/compose.yaml
+++ b/compose.yaml
@@ -209,6 +209,40 @@ services:
     networks:
       - ls
 
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+    ports:
+      - 9191:9090
+    restart: unless-stopped
+    volumes:
+      - ./prometheus:/etc/prometheus
+      - prom_data:/prometheus
+    dns:
+      - 10.0.2.20
+    networks:
+      - ls
+
+  grafana:
+    image: grafana/grafana
+    container_name: grafana
+    ports:
+      - 3000:3000
+    restart: unless-stopped
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=grafana
+    volumes:
+      - ./grafana:/etc/grafana/provisioning/datasources
+    dns:
+      - 10.0.2.20
+    networks:
+      - ls
+
+volumes:
+  prom_data:
 
 networks:
   ls:
