--- a/microservice-resource/src/main/resources/application.properties
+++ b/microservice-resource/src/main/resources/application.properties
@@ -27,3 +27,6 @@ management.endpoint.metrics.enabled=true
 management.endpoints.web.exposure.include=*
 management.endpoint.prometheus.enabled=true
 management.metrics.export.prometheus.enabled=true
+
+server.servlet.context-path=/api/services
+security.oauth2.resource.user-info-uri=http://localhost:8083/api/auth/user
