--- a/microservice-storage/src/main/resources/application.properties
+++ b/microservice-storage/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=microservice_storage
 server.port=8780
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://localhost:5433/storageservicedatabase?currentSchema=storage_schema?autoReconnect=true
 spring.datasource.username=storageuser
 spring.datasource.password=storagepass
